--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,13 @@
 name: Deploy Fake
 on:
-  workflow_call:
+  repository_dispatch:
+    types:
+      - deploy-remoto
 jobs:
     deploy-kubernetes:
        runs-on: ubuntu-latest
        steps:
             - name: Deploy no ambiente
-              run: echo "Executando o deploy no ambiente de ${{ secrets.AMBIENTE_ENTREGA }}"
+              run: echo "Executando o deploy no ambiente de ${{ github.event.client_payload.ambiente }}"
             - name: Curl Deploy no ambiente
-              run: "curl -X POST https://webhook.site/5a51c018-d468-43f7-83c3-a1fd832ac068 -d '{ ambiente: ${{ secrets.AMBIENTE_ENTREGA }}}'"
+              run: "curl -X POST https://webhook.site/5a51c018-d468-43f7-83c3-a1fd832ac068 -d '{ ambiente: ${{ github.event.client_payload.ambiente }}}'"
